fixing alertArray reset bug; removing z-index on gray overlay to allow keyboard shortcuts on top

--- a/css/mapstyle.css
+++ b/css/mapstyle.css
@@ -555,7 +555,6 @@ input[type="text"]
 	background-color: black;
 	background-image: none;
 	opacity: 0.8;
-	z-index: 1040;
 }
 #drop-container
 {
